--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,6 @@ div, canvas {
     top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
-    background: #E0E0E0; }
+    right: 0; }
 
 /*# sourceMappingURL=styles.css.map */
