--- a/src/layouts/index.jade
+++ b/src/layouts/index.jade
@@ -26,11 +26,11 @@ html
           .label Score
 
         .cups-counter.pull-right.CupsCounters
-          +cup('red', 'Red')
-          +cup('yellow', 'Yellow')
-          +cup('green', 'Green')
-          +cup('blue', 'Blue')
-          +cup('magenta', 'Magenta')
+          +cup('red', 'red')
+          +cup('yellow', 'yellow')
+          +cup('green', 'green')
+          +cup('blue', 'blue')
+          +cup('magenta', 'magenta')
 
         .counter
           .value.Moves 0
