--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,8 @@ div, canvas {
         margin: 0 10px; }
         .wrapper .header .cups-counter .cup-counter.done .cup-score {
           display: none; }
+        .wrapper .header .cups-counter .cup-counter.done .cup {
+          border: 15px solid; }
         .wrapper .header .cups-counter .cup-counter .cup {
           width: 30px;
           height: 30px;
@@ -81,7 +83,12 @@ div, canvas {
           border-radius: 50%;
           -webkit-background-clip: padding-box;
           -moz-background-clip: padding-box;
-          background-clip: padding-box; }
+          background-clip: padding-box;
+          -webkit-transition: all 200ms;
+          -moz-transition: all 200ms;
+          -ms-transition: all 200ms;
+          -o-transition: all 200ms;
+          transition: all 200ms; }
           .wrapper .header .cups-counter .cup-counter .cup.red {
             background: #F15A5A;
             border-color: #eb1414; }
