Swap method and animation

--- a/src/layouts/depends.jade
+++ b/src/layouts/depends.jade
@@ -10,5 +10,8 @@ script(src='https://code.createjs.com/tweenjs-0.6.0.min.js')
 script(src='https://code.createjs.com/soundjs-0.6.0.min.js')
 script(src='https://code.createjs.com/preloadjs-0.6.0.min.js')
 
+//- async
+script(src='https://cdn.rawgit.com/caolan/async/baee7a647e77195ee897caf1e17374eae473e517/lib/async.js')
+
 //- styles
 link(rel='stylesheet' href='http://necolas.github.io/normalize.css/3.0.2/normalize.css')
