--- a/src/layouts/index.jade
+++ b/src/layouts/index.jade
@@ -10,6 +10,7 @@ doctype html
 html
   head
     include depends.jade
+    meta(name='viewport' content='width=device-width, initial-scale=1')
     link(rel='stylesheet' href='styles.css')
     script(src='app.js')
     title EvaStudio test task: Match3
